--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,8 @@ button {
 text-align: center;
 }
 
-body { font-family: 'Roboto',
-    sans-serif;
+body { 
+    font-family: 'Roboto', sans-serif;
     color: #434455;
     background-color: #FFFFFF;
 }
@@ -502,7 +502,7 @@ color: var(--WHITE, #FFF);
 .footer-list {
 display: flex;
 justify-content: space-evenly;
-gap: 16px;
+gap: 16px; 
 }
 
 .icon {
@@ -535,3 +535,318 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 background-color: #31D0AA; 
 }
 
+.subscribe-footer-wrapper {
+margin-left: 80px;
+}
+
+.subscribe-footer {
+color: #FFF;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5; 
+letter-spacing: 0.02em;
+margin-bottom: 16px;
+
+}
+
+.subscribe-form-footer {
+display: flex;
+column-gap: 24px;
+} 
+
+.subscribe-label-footer {
+display: flex;
+}  
+
+.subscribe-input-footer {
+width: 264px;
+height: 40px;
+border-radius: 4px;
+border: 1px solid #FFF;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+background-color: transparent;
+outline: 0px solid transparent;
+color: #FFF;
+font-size: 12px;
+font-weight: 400;
+line-height: 2; 
+letter-spacing: 0.04em;
+padding: 8px 16px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-input-footer:focus {
+border-color: #4D5AE5;
+}
+
+.subscribe-button-futtor {
+border-radius: 4px;
+background: #4D5AE5;
+border: 0;
+color: #FFF;
+margin-left: auto;
+margin-right: auto;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+min-width: 165px;
+height: 40px;
+padding: 8px 24px;
+display: flex;
+justify-content: center;
+align-items: center;
+column-gap: 16px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.subscribe-input-footer::placeholder {
+color: #FFF
+}
+
+.subscribe-button-futtor:hover,
+.subscribe-button-futtor:focus {
+background-color: #404BBF;
+}
+
+.send-email-svg {
+fill: #fff;
+}
+
+/* BACKDROP STYLES */
+
+.backdrop {
+position: fixed;
+top: 0;
+left: 0;
+z-index: 999999;
+width: 100%;
+height: 100%;
+background-color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+opacity: 1;
+visibility: visible;
+pointer-events: auto;
+}
+
+/* MODAL WINDOW STYLES */
+
+.modal {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 408px;
+min-height: 584px; 
+background-color: #FCFCFC;
+border-radius: 4px;
+padding: 72px 24px 24px 24px ;
+
+}
+
+.modal-close-button {
+position: absolute;
+top: 24px;
+right: 24px;
+padding: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: #E7E9FC;
+border: 1px solid rgba(0, 0, 0, 0.10);
+border-radius: 50%;
+fill: var(--CORNFLOWER, #E7E9FC);
+width: 24px;
+height: 24px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+background-color: #404BBF;
+border: none;
+}
+
+.modal-close-button-icon {
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover .modal-close-button-icon,
+.modal-close-button:focus .modal-close-button-icon { 
+fill: white;
+}
+
+.modal-close-button-icon {
+fill: #2E2F42;
+}
+
+.review-form-desription {
+width: 360px;    
+color: #2E2F42;
+text-align: center;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5; 
+letter-spacing: 0.02em;
+margin-bottom: 16px;
+}
+
+.review-form-label {
+display: block;
+color: #8e8f99;
+font-size: 12px;
+font-weight: 400;
+line-height: 1.17;
+letter-spacing: 0.04em;
+margin-bottom: 4px;
+}
+
+.review-form-wrapper {
+margin-bottom: 16px;
+}
+
+.review-form-input-wrapper {
+position: relative;
+}
+
+.review-form-input {
+width: 100%;
+height: 40px;
+border-radius: 4px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+background-color: transparent;
+outline: 0px solid transparent;
+padding-left: 38px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-input-icon {
+position: absolute;
+fill: #2e2f42;
+left: 16px;
+top: 50%;
+transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-input:focus{
+border-color: #4D5AE5;
+}
+
+.review-form-input:focus + .review-form-input-icon {
+fill: #4D5AE5;
+}
+
+.review-form-textarea {
+width: 100%;
+height: 120px;
+border-radius: 4px;
+border: 1px solid rgba(46, 47, 66, 0.40);
+background-color: transparent;
+outline: 0px solid transparent;
+padding: 8px 16px;
+resize: none;
+color: rgba(46, 47, 66, 0.40);
+font-size: 12px;
+font-weight: 400;
+line-height: 1.7;
+letter-spacing: 0.04em;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-textarea::placeholder {
+color: rgba(46, 47, 66, 0.40)
+}
+
+.review-form-textarea:focus{
+    border-color: #4D5AE5;
+}
+/* CHECKBOX */
+
+.review-form-checkbox-wrapper{
+margin-bottom: 24px;
+}
+
+.review-form-own-checkbox {
+display: inline-flex;
+justify-content: center;
+align-items: center;
+width: 16px;
+height: 16px;
+border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.40);
+cursor: pointer;
+margin-right: 8px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-checkbox:checked
++ .review-form-checkbox-label
+> .review-form-own-checkbox {
+background-color: #404BBF;
+border-color: #404BBF;
+}
+
+.review-form-checkbox:focus
++ .review-form-checkbox-label
+> .review-form-own-checkbox {
+outline: 2px solid rgba(0, 0, 255, 0.5)
+}
+
+.review-form-checkbox-icon{ 
+fill: #f4f4fd;
+opacity: 0;
+}
+
+.review-form-checkbox:checked
++ .review-form-checkbox-label 
+.review-form-checkbox-icon {
+opacity: 1;
+}
+
+/* --------------------------------------- */
+
+
+
+.review-form-checkbox-label {
+font-size: 12px;
+font-weight: 400;
+line-height: 1.7;
+letter-spacing: 0.04em;
+color: #8E8F99;
+}
+
+.accent-color {
+color: #4D5AE5;
+}
+
+.review-form-submit-button {
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+min-width: 169px;
+height: 59px;   
+display: block;
+margin-left: auto;
+margin-right: auto;
+border-radius: 4px;
+border: none;
+background: #4D5AE5;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-submit-button:hover,
+.review-form-submit-button:focus {
+background-color: #404BBF;
+}
