--- a/css/styles.css
+++ b/css/styles.css
@@ -712,6 +712,10 @@ margin-bottom: 4px;
 margin-bottom: 8px;
 }
 
+.review-form-comment-wrapper {
+margin-bottom: 16px;
+}
+
 .review-form-input-wrapper {
 position: relative;
 }
@@ -818,7 +822,7 @@ opacity: 1;
 .review-form-checkbox-label {
 font-size: 12px;
 font-weight: 400;
-line-height: 1.7;
+line-height: 1.17;
 letter-spacing: 0.04em;
 color: #8E8F99;
 }
